--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.4'
     annotationProcessor 'androidx.room:room-compiler:2.2.4'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.paging:paging-runtime:2.1.1'
 }
